--- a/sass/main.scss
+++ b/sass/main.scss
@@ -38,6 +38,7 @@ body {
         padding: 10px;
         border: 1px solid lightgrey;
         border-radius: 5px;
+        font-size: 16px;
     }
     button{
         background-color: lightgrey;
@@ -47,6 +48,7 @@ body {
         font-size: 18px;
         font-weight: bold;
         cursor: pointer;
+        outline: none;
     }
   }
 }
